Fix the horizontal padding and spacing

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -152,7 +152,7 @@
 /* nft section */
 
 .nftSection {
-    padding: 4rem 50px;
+    padding: 4rem 207px;
     background-image: url("/nft-bg.webp");
     color: white;
     background-size: cover;
